Updating context menu and fixing scale position, signature select and hover contrast increased, fixed ESI set destination

--- a/app/css/signatures.css
+++ b/app/css/signatures.css
@@ -52,11 +52,11 @@ html .ui-selectmenu-menu ul {
 }
 
 #sigTable tr:hover td {
-	background-color: #333;
+	background-color: #444;
 }
 
 #sigTable tr.selected td {
-	background-color: #222;
+	background-color: #333;
 }
 
 #sigTable th:nth-child(1) {
